# poetry2nixproblem

./: flake.nix  pyproject.toml
